crates/reinhardt-pages/tests/ui/server_fnset/fail/collection_lookup.stderr
error: this action requires `CollectionReadActionContext`
 --> tests/ui/server_fnset/fail/collection_lookup.rs:9:51
  |
9 |     async fn preview(lookup: i64, #[inject] context: reinhardt_pages::server_fn::DetailReadActionContext<ArticleResource>) -> Result<...
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/collection_lookup.rs:4:44
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  |                                            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/collection_lookup.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/collection_lookup.rs:4:1
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/collection_lookup.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)
